app/assets/stylesheets/components/btn.scss
.btn {
  border-radius: var(--border-radius);
  padding: .5rem 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  box-shadow: none;
  border-style: none;
  color: var(--secondary-text-color);
  transition: background-color 200ms;
  background-color: transparent;
  display: inline-block;
  text-align: center;

  &:hover {
    background-color: var(--accent-bg-color);
  }
}

